# ilpdlsts-py

./: .gitignore  README.md  pyproject.toml
.github/: docs.yml
.github/workflows/: release.yml
docs/: requirements.txt
docs/source/: conf.py  ilpdlsts.rst  index.rst  modules.rst
ilpdlsts/: __init__.py
