[project]
name = "ilpdlsts"
version = "0.0.1"
description = "Python Package for Santec Insertion Loss and Polarization Dependent Loss Swept Test System"
authors = [{name = "Santec Holdings Corporation"}]
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.7"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"